fix: update of breakpoints-dependant tokens

--- a/composed-variables/composed-variables.css
+++ b/composed-variables/composed-variables.css
@@ -45,15 +45,11 @@
   --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-zero);
   --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-zero);
 
-  /* Button */
-  --sbb-size-button-s-min-height: var(--sbb-size-element-xs-zero);
-  --sbb-size-button-m-min-height: var(--sbb-size-element-s-zero);
-  --sbb-size-button-l-min-height: var(--sbb-size-element-m-zero);
-
-  /* Form */
-  --sbb-size-form-element-s-min-height: var(--sbb-size-element-xs-zero);
-  --sbb-size-form-element-m-min-height: var(--sbb-size-element-m-zero);
-  --sbb-size-form-element-l-min-height: var(--sbb-size-element-l-zero);
+  /* Size */
+  --sbb-size-element-xs: var(--sbb-size-element-xs-zero);
+  --sbb-size-element-s: var(--sbb-size-element-s-zero);
+  --sbb-size-element-m: var(--sbb-size-element-m-zero);
+  --sbb-size-element-l: var(--sbb-size-element-l-zero);
 
   @media (forced-colors: active) {
     /* Focus outline */
@@ -121,15 +117,11 @@
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-medium);
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-medium);
 
-    /* Button */
-    --sbb-size-button-s-min-height: var(--sbb-size-element-xs-medium);
-    --sbb-size-button-m-min-height: var(--sbb-size-element-s-medium);
-    --sbb-size-button-l-min-height: var(--sbb-size-element-m-medium);
-
-    /* Form */
-    --sbb-size-form-element-s-min-height: var(--sbb-size-element-xs-medium);
-    --sbb-size-form-element-m-min-height: var(--sbb-size-element-m-medium);
-    --sbb-size-form-element-l-min-height: var(--sbb-size-element-l-medium);
+    /* Size */
+    --sbb-size-element-xs: var(--sbb-size-element-xs-medium);
+    --sbb-size-element-s: var(--sbb-size-element-s-medium);
+    --sbb-size-element-m: var(--sbb-size-element-m-medium);
+    --sbb-size-element-l: var(--sbb-size-element-l-medium);
   }
 
   /**
