feat: new token for sbb-title size s

--- a/composed-variables/composed-variables.css
+++ b/composed-variables/composed-variables.css
@@ -23,6 +23,7 @@
   --sbb-font-size-title-4: var(--sbb-typo-scale-1-25x);
   --sbb-font-size-title-5: var(--sbb-typo-scale-1-125x);
   --sbb-font-size-title-6: var(--sbb-typo-scale-0-875x);
+  --sbb-font-size-title-7: var(--sbb-typo-scale-0-75x);
   --sbb-font-size-text-xl: var(--sbb-typo-scale-1-25x);
   --sbb-font-size-text-l: var(--sbb-typo-scale-1-125x);
   --sbb-font-size-text-m: var(--sbb-typo-scale-default);
@@ -98,6 +99,7 @@
     --sbb-font-size-title-4: var(--sbb-typo-scale-1-5x);
     --sbb-font-size-title-5: var(--sbb-typo-scale-1-25x);
     --sbb-font-size-title-6: var(--sbb-typo-scale-default);
+    --sbb-font-size-title-7: var(--sbb-typo-scale-0-875x);
     --sbb-font-size-text-xl: var(--sbb-typo-scale-1-5x);
     --sbb-font-size-text-l: var(--sbb-typo-scale-1-25x);
     --sbb-font-size-text-m: var(--sbb-typo-scale-1-125x);
