--- a/composed-variables/composed-variables.css
+++ b/composed-variables/composed-variables.css
@@ -22,29 +22,14 @@
     var(--sbb-color-turquoise-light),
     var(--sbb-color-turquoise-dark)
   );
+  --sbb-color-royal: light-dark(var(--sbb-color-royal-light), var(--sbb-color-royal-dark));
+  --sbb-color-royal85: light-dark(var(--sbb-color-royal85-light), var(--sbb-color-royal85-dark));
+  --sbb-color-royal125: light-dark(var(--sbb-color-royal125-light), var(--sbb-color-royal125-dark));
+  --sbb-color-royal150: light-dark(var(--sbb-color-royal150-light), var(--sbb-color-royal150-dark));
 
   --sbb-color-primary: var(--sbb-color-red);
-  --sbb-color-primary-alpha-20: color-mix(in srgb, var(--sbb-color-primary) 20%, transparent);
-  --sbb-color-primary-alpha-40: color-mix(in srgb, var(--sbb-color-primary) 40%, transparent);
-  --sbb-color-primary-alpha-60: color-mix(in srgb, var(--sbb-color-primary) 60%, transparent);
-  --sbb-color-primary-alpha-90: color-mix(in srgb, var(--sbb-color-primary) 90%, transparent);
   --sbb-color-primary-85: var(--sbb-color-red85);
   --sbb-color-primary-125: var(--sbb-color-red125);
-  --sbb-color-primary-125-alpha-20: color-mix(
-    in srgb,
-    var(--sbb-color-primary-125) 20%,
-    transparent
-  );
-  --sbb-color-primary-125-alpha-40: color-mix(
-    in srgb,
-    var(--sbb-color-primary-125) 40%,
-    transparent
-  );
-  --sbb-color-primary-125-alpha-60: color-mix(
-    in srgb,
-    var(--sbb-color-primary-125) 60%,
-    transparent
-  );
   --sbb-color-primary-150: var(--sbb-color-red150);
 
   --sbb-color-error: light-dark(var(--sbb-color-red125), var(--sbb-color-red85));
@@ -106,37 +91,25 @@
   --sbb-border-color-5: var(--sbb-color-smoke);
 
   --sbb-shadow-color-soft-1: light-dark(
-    var(--sbb-color-smoke-alpha-5),
-    var(--sbb-color-black-alpha-15)
+    color-mix(in srgb, var(--sbb-color-smoke) 5%, transparent),
+    color-mix(in srgb, var(--sbb-color-black) 15%, transparent)
   );
   --sbb-shadow-color-soft-2: light-dark(
-    var(--sbb-color-smoke-alpha-10),
-    var(--sbb-color-black-alpha-20)
+    color-mix(in srgb, var(--sbb-color-smoke) 10%, transparent),
+    color-mix(in srgb, var(--sbb-color-black) 20%, transparent)
   );
-  --sbb-shadow-color-soft-1-negative: light-dark(
-    var(--sbb-color-black-alpha-15),
-    var(--sbb-color-black-alpha-15)
-  );
-  --sbb-shadow-color-soft-2-negative: light-dark(
-    var(--sbb-color-black-alpha-20),
-    var(--sbb-color-black-alpha-20)
-  );
+  --sbb-shadow-color-soft-1-negative: color-mix(in srgb, var(--sbb-color-black) 15%, transparent);
+  --sbb-shadow-color-soft-2-negative: color-mix(in srgb, var(--sbb-color-black) 20%, transparent);
   --sbb-shadow-color-hard-1: light-dark(
-    var(--sbb-color-smoke-alpha-10),
-    var(--sbb-color-black-alpha-30)
+    color-mix(in srgb, var(--sbb-color-smoke) 10%, transparent),
+    color-mix(in srgb, var(--sbb-color-black) 30%, transparent)
   );
   --sbb-shadow-color-hard-2: light-dark(
-    var(--sbb-color-smoke-alpha-20),
-    var(--sbb-color-black-alpha-40)
+    color-mix(in srgb, var(--sbb-color-smoke) 20%, transparent),
+    color-mix(in srgb, var(--sbb-color-black) 40%, transparent)
   );
-  --sbb-shadow-color-hard-1-negative: light-dark(
-    var(--sbb-color-black-alpha-30),
-    var(--sbb-color-black-alpha-30)
-  );
-  --sbb-shadow-color-hard-2-negative: light-dark(
-    var(--sbb-color-black-alpha-40),
-    var(--sbb-color-black-alpha-40)
-  );
+  --sbb-shadow-color-hard-1-negative: color-mix(in srgb, var(--sbb-color-black) 30%, transparent);
+  --sbb-shadow-color-hard-2-negative: color-mix(in srgb, var(--sbb-color-black) 40%, transparent);
 
   --sbb-font-default-color: var(--sbb-color-2);
 
